--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
   <meta property="og:url" content="">
   <meta property="og:image" content="">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="./site.webmanifest">
+  <link rel="apple-touch-icon" href="./icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="./css/normalize.css">
+  <link rel="stylesheet" href="./css/main.css">
 
   <meta name="theme-color" content="#fafafa">
-  <script src="js/vendor/modernizr-3.11.2.min.js" defer></script>
-  <script src="js/plugins.js" defer></script>
-  <script src="js/main.js" defer></script>
+  <script src="./js/vendor/modernizr-3.11.2.min.js" defer></script>
+  <script src="./js/plugins.js" defer></script>
+  <script src="./js/main.js" defer></script>
 </head>
 
 <body>
